--- a/src/Client (iOS)/VibeLight/VibeLight/Base.lproj/Main.storyboard
+++ b/src/Client (iOS)/VibeLight/VibeLight/Base.lproj/Main.storyboard
@@ -3,10 +3,9 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--VibeLights-->
+        <!--First-->
         <scene sceneID="hNz-n2-bh7">
             <objects>
                 <viewController id="9pv-A4-QxB" customClass="FirstViewController" customModule="VibeLight" customModuleProvider="target" sceneMemberID="viewController">
@@ -18,20 +17,20 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="9Xb-F8-yZh">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="background.png" translatesAutoresizingMaskIntoConstraints="NO" id="9Xb-F8-yZh">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="687"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="0.19714765100000001" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="VibeLights" image="first" id="acW-dT-cKf"/>
+                    <tabBarItem key="tabBarItem" title="First" image="first" id="acW-dT-cKf"/>
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="756" y="-589"/>
         </scene>
-        <!--Settings-->
+        <!--Second-->
         <scene sceneID="wg7-f3-ORb">
             <objects>
                 <viewController id="8rJ-Kc-sve" customClass="SecondViewController" customModule="VibeLight" customModuleProvider="target" sceneMemberID="viewController">
@@ -43,50 +42,27 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sign in your account" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hqa-cB-49U">
-                                <rect key="frame" x="49" y="73" width="156" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <textField opaque="NO" clipsSubviews="YES" alpha="0.5" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="FZK-Gi-TY0">
-                                <rect key="frame" x="49" y="127" width="212" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="212" id="uks-Z1-F1G"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <textField opaque="NO" clipsSubviews="YES" alpha="0.55000000000000004" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YE4-JA-Ue1">
-                                <rect key="frame" x="49" y="165" width="212" height="30"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tDM-Og-pBh">
-                                <rect key="frame" x="49" y="203" width="50" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="50" id="kTm-tQ-Knj"/>
-                                </constraints>
-                                <state key="normal" title="Sign in"/>
-                            </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="4ys-hr-7Wa">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="background.png" translatesAutoresizingMaskIntoConstraints="NO" id="4ys-hr-7Wa">
                                 <rect key="frame" x="0.0" y="-44" width="600" height="687"/>
                             </imageView>
+                            <textField opaque="NO" clipsSubviews="YES" alpha="0.5" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="FZK-Gi-TY0">
+                                <rect key="frame" x="77" y="128" width="212" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" alpha="0.55000000000000004" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YE4-JA-Ue1">
+                                <rect key="frame" x="77" y="166" width="212" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tDM-Og-pBh">
+                                <rect key="frame" x="77" y="204" width="50" height="30"/>
+                                <state key="normal" title="Sign in"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="FZK-Gi-TY0" firstAttribute="leading" secondItem="YE4-JA-Ue1" secondAttribute="leading" id="4ZQ-v9-ygg"/>
-                            <constraint firstItem="hqa-cB-49U" firstAttribute="leading" secondItem="FZK-Gi-TY0" secondAttribute="leading" id="79D-Do-EUs"/>
-                            <constraint firstItem="tDM-Og-pBh" firstAttribute="top" secondItem="YE4-JA-Ue1" secondAttribute="bottom" constant="8" symbolic="YES" id="DTA-Am-KiP"/>
-                            <constraint firstItem="hqa-cB-49U" firstAttribute="top" secondItem="L7p-HK-0SC" secondAttribute="bottom" constant="53" id="GdU-rd-pYa"/>
-                            <constraint firstItem="hqa-cB-49U" firstAttribute="leading" secondItem="QS5-Rx-YEW" secondAttribute="leadingMargin" constant="29" id="NjX-9R-PVA"/>
-                            <constraint firstItem="YE4-JA-Ue1" firstAttribute="leading" secondItem="tDM-Og-pBh" secondAttribute="leading" id="Ovo-v2-DVg"/>
-                            <constraint firstItem="FZK-Gi-TY0" firstAttribute="top" secondItem="hqa-cB-49U" secondAttribute="bottom" constant="33" id="fOf-3E-CzP"/>
-                            <constraint firstItem="YE4-JA-Ue1" firstAttribute="top" secondItem="FZK-Gi-TY0" secondAttribute="bottom" constant="8" symbolic="YES" id="xxD-F8-Yqd"/>
-                            <constraint firstItem="FZK-Gi-TY0" firstAttribute="trailing" secondItem="YE4-JA-Ue1" secondAttribute="trailing" id="zN9-Xl-1ey"/>
-                        </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Settings" image="second" id="cPa-gy-q4n"/>
+                    <tabBarItem key="tabBarItem" title="Second" image="second" id="cPa-gy-q4n"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4Nw-L8-lE0" sceneMemberID="firstResponder"/>
             </objects>
@@ -113,7 +89,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="background" width="628" height="942"/>
+        <image name="background.png" width="628" height="942"/>
         <image name="first" width="30" height="30"/>
         <image name="second" width="30" height="30"/>
     </resources>
