Updated backgrounds and appicon in iOS project

--- a/src/Client (iOS)/VibeLight/VibeLight/Base.lproj/LaunchScreen.storyboard
+++ b/src/Client (iOS)/VibeLight/VibeLight/Base.lproj/LaunchScreen.storyboard
@@ -17,7 +17,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="appicon.png" translatesAutoresizingMaskIntoConstraints="NO" id="T3D-Gx-icS">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="appicon_nofont" translatesAutoresizingMaskIntoConstraints="NO" id="T3D-Gx-icS">
                                 <rect key="frame" x="225" y="225" width="150" height="150"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="150" id="cA1-w0-F0M"/>
@@ -47,6 +47,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="appicon.png" width="369" height="369"/>
+        <image name="appicon_nofont" width="640" height="640"/>
     </resources>
 </document>
